--- a/be/package.json
+++ b/be/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "joi": "^17.13.3",
     "mongoose": "^8.7.3",
+    "shopify-product-microservice": "file:",
     "winston": "^3.15.0"
   },
   "devDependencies": {
